# ernie-image-mlx

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py  generate_changelog.py  validate_versions.py
tests/: conftest.py
tests/parity/: _helpers.py  _pt_reference.py  test_attention_parity.py  test_block_parity.py  test_model_parity.py  test_vae_parity.py
tests/smoke/: test_cli.py  test_config_shapes.py  test_golden_image.py  test_loader.py  test_pipeline_shapes.py  test_prompt_enhancer.py  test_text_encoder.py  test_vae_integration.py
